# ChangeLog for dev-util/qgit
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.5 2006/03/25 19:35:02 ferdy Exp $

  25 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> qgit-1.1.1.ebuild:
  inherit qt3 to avoid sandbox violations that I didn't suffer from, hopefully
  fixing bug #127280

*qgit-1.1.1 (23 Mar 2006)

  23 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.1_rc1.ebuild,
  +qgit-1.1.1.ebuild:
  Version bump, as per bug #112120, reported by Bertrand Jacquin
  <beber.gentoo@gmail.com>. Remove release candidates

*qgit-1.1_rc1 (09 Jan 2006)

  09 Jan 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.1_rc1.ebuild:
  New upstream version

*qgit-0.97.1 (11 Nov 2005)

  11 Nov 2005; Fernando J. Pereda <ferdy@gentoo.org> +qgit-0.97.1.ebuild:
  version bump, wrt bug #112120

*qgit-0.96.1 (30 Oct 2005)

  30 Oct 2005; Fernando J. Pereda <ferdy@gentoo.org> +metadata.xml,
  +qgit-0.96.1.ebuild:
  initial commit. fixes #110072
