@@ -1,0 +1,1 @@
+MD5 b862efe8190446f129dcebdca69340f5 qgit-1.2.tar.bz2 167420
