@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/qgit
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.5 2006/03/25 19:35:02 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.6 2006/04/29 13:15:11 ferdy Exp $
+
+*qgit-1.2 (29 Apr 2006)
+
+  29 Apr 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-0.96.1.ebuild,
+  -qgit-0.97.1.ebuild, +qgit-1.2.ebuild:
+  New upstream version. Remove ancient ones
 
   25 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> qgit-1.1.1.ebuild:
   inherit qt3 to avoid sandbox violations that I didn't suffer from, hopefully
